--- a/Application/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Application/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -1,12 +1,33 @@
-li .glyphicon {
+li .fa {
   margin-right: 10px;
+}
+
+.flex-column {
+  width: 100%;
+}
+
+.navbar {
+  padding: 0;
+}
+
+.navbar-brand {
+  padding: 15px;
+}
+
+.navbar-toggler {
+  margin-right: 15px;
+}
+
+.nav-link {
+  padding-left: 16px;
 }
 
 /* Highlighting rules for nav menu items */
 li.link-active a,
 li.link-active a:hover,
 li.link-active a:focus {
-  background-color: midnightblue;
+  background-color: #34064f;
+  color: white;
 }
 
 /* Keep the nav menu independent of scrolling and on top of other items */
@@ -18,30 +39,21 @@ li.link-active a:focus {
   z-index: 1;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 576px) {
   /* On small screens, convert the nav menu to a vertical sidebar */
   .main-nav {
     height: 100%;
-    width: calc(20% - 20px);
+    width: calc(25% - 20px);
   }
-
   .navbar {
     border-radius: 0px;
     border-width: 0px;
     height: 100%;
-  }
-
-  .navbar-inverse {
-    background-color: black;
-    border-radius: 1px;
-    border-width: 0px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: block;
   }
 
   .navbar-header {
     float: none;
-    text-align:center;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
   .navbar-collapse {
@@ -57,7 +69,6 @@ li.link-active a:focus {
     float: none;
     font-size: 15px;
     margin: 6px;
-
   }
 
     .navbar li a {
